--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>aprende a programar</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <nav class="nav"></nav>
+      </header>
+      <main class="main-container">
+        <section class="section-primary"></section>
+        <section class="section-primary"></section>
+      </main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
