--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="container">
       <header class="header">
+        <h1>APRENDE</h1>
         <nav class="nav"></nav>
       </header>
       <main class="main-container">
