--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--estilos css-->
     <!--se agrega linea por archivo de estilos-->
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/styles-header.css" />
@@ -15,24 +14,24 @@
     <div class="container">
       <!--cabeza del contenido-->
       <header class="container-header">
-        <h1 class="container-header__title">APRENDE</h1>
+        <h1 class="container-header__title">LENGUAJES PARA APRENDER</h1>
 
         <!--barra de navegacion-->
         <nav class="container-nav">
-          <ul class="container-nav__lists">
+          <ul class="container-nav">
             <li class="container-nav__list container-nav__list--box1">
-              <a href="">a</a>
+              <a href="HTML.JPG">html</a>
             </li>
             <li class="container-nav__list container-nav__list--box2">
-              <a href="">b</a>
+              <a href="CSS.JPG" whidth= "50xp" height="50xp">css</a>
             </li>
             <li class="container-nav__list container-nav__list--box3">
-              <a href="">c</a>
-            </li>
-            <li class="container-nav__list container-nav__list--box4">
-              <a href="">d</a>
+              <a href="javascript.jpg.jpg">javascript</a>
             </li>
           </ul>
+        </nav>
+        <nav class="container-nav__list--box2">
+          <ol class="container-nav__lists">
         </nav>
       </header>
 
