oeganice estructura de archivo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--se agrega linea por archivo de estilos-->
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/styles-header.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>aprende a programar</title>
   </head>
   <body>
@@ -51,6 +50,6 @@
 
     <!--Codigo JS-->
     <!--Se agrega linea por codigo-->
-    <script src="js/script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
