estructura de la primera sesion

--- a/index.html
+++ b/index.html
@@ -36,12 +36,29 @@
 
       <!--menu-->
       <main class="container-main">
-        <section class="section-container section-green">
+        <section>
+
+          <!--sesion 1-->
+        </section>
+        <section>
           <article>
-            <div class="card"></div>
+            <div></div>
+            <div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </article>
+          <article>
+            <div>
+              <div></div>
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <div></div>
           </article>
         </section>
-        <section class="section-container section-red"></section>
       </main>
 
       <!--footer-->
