Estilos de la sesion 2

--- a/index.html
+++ b/index.html
@@ -38,27 +38,58 @@
       <main class="container-main">
         <section>
 
-          <!--sesion 1-->
+          
         </section>
-        <section>
-          <article>
-            <div></div>
-            <div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-          </article>
-          <article>
-            <div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
-            <div></div>
-          </article>
-        </section>
+
+        <!--sesion 2-->
+<section class="section-about">
+
+  <!-- Artículo 1 -->
+  <article class="section-about__article section-about__article--reverse">
+
+    <!-- Contenedor 1 de imagen -->
+    <div class="section-about__image-container">
+      <img src="image/main/img_main_3.png" alt="Main image woman" class="section-about__image">
+    </div>
+
+    <!-- Contenedor 2 de contenido -->
+    <div class="section-about__content">
+      <div class="section-about__title"><h2>About Us</h2></div>
+      <div class="ction-asebout__text">
+        <p>A privately owned and run business, theeventslounge.com, has been serving many private and corporate clients in the and around the area for many years. We only use the best quality equipment and offer a personable service to cater for all our clients needs.</p>
+      </div>
+      <div class="section-about__text">
+        <p>We have a full £10M public liability insurance and all equipment is PAT certified. As event planning goes, our team takes thinking outside the box to a new level. It's a matter of mixing ideas up, working collectively, and finding inspiration. To say we focus on the little things and details couldn't be truer, as it's the details that matter and make an event memorable.</p>
+      </div>
+    </div>
+  </article>
+
+  <!-- Artículo 2 -->
+  <article class="section-about__article section-about__article-2">
+
+    <!-- Contenedor 1 de contenido -->
+    <div class="section-about__content-2">
+      <div class="section-about__content-son">
+      <div class="section-about__title-2"><h2>Create Your Perfect Event</h2></div>
+      <div class="section-about__text-2">
+        <p>It's your vision, your idea, and your party. Our event team take that sentiment to heart when helping you to plan your special event or party.</p>
+      </div>
+      <div class="section-about__text-2">
+        <p>Whether it's a photobooth you're after, a disco, uplighting or a combination of it all with event planning support, theeventslounge.com has the imagination and creative spirit you need.</p>
+      </div>
+      <div class="section-about__button-container">
+        <button class="section-about__button"><a href="#sesion_contact" class="section-about__link">Enquire Now</a></button>
+      </div>
+      </div>
+    </div>
+
+    <!-- Contenedor 2 de imagen -->
+    <div class="section-about__image-container-2">
+      <img src="image/main/img_main_6.png" alt="Two women having fun" class="section-about__image-2">
+    </div>
+  </article>
+</section>
+
       </main>
 
       <!--footer-->
