--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
         <!--sesion 2-->
 <section class="section-about">
-
   <!-- Artículo 1 -->
   <article class="section-about__article section-about__article--reverse">
 
@@ -88,6 +87,71 @@
       <img src="image/main/img_main_6.png" alt="Two women having fun" class="section-about__image-2">
     </div>
   </article>
+       <!-- sesion 03 -->
+<section class="services__categoria">
+  <div class="section_servicios__title"><h2>servises</h2></div>
+  </div>
+
+  <div class="section_servicios__container">
+    <div class="grid-container">
+
+ <!-- Tarjeta 2: DJ -->
+      <div class="card">
+        <img src="image/main/img_main_5.png" alt="DJ">
+        <div class="card-content">
+          <h3>Wedding DJ Services</h3>
+          <p>Our professional wedding DJ services ensure an unforgettable experience through the perfect playlist, seamless mixing, and special moments. We take care of every detail.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+<!-- Tarjeta 2: pareja -->
+      <div class="card">
+        <img src="image/main/img_main_2.png" alt="pareja">
+        <div class="card-content">
+          <h3>Photo Booth Hire</h3>
+          <p>This new take of the Photo Booth comes fully digital and is a great way to capture special moments. Includes digital filters and social sharing.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+<!-- Tarjeta 2: boda -->
+      <div class="card">
+        <img src="image/main/img_main_8.png" alt="boda">
+        <div class="card-content">
+          <h3>Uplighting</h3>
+          <p>Add that WOW factor to your event with beautiful mood lighting that will change the mood of any venue, big or small.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+<!-- Tarjeta 2: pista de baile -->
+      <div class="card">
+        <img src="image/main/img_main_1.png" alt="pista de baile">
+        <div class="card-content">
+          <h3>Dance Floors</h3>
+          <p>Every customizable type of dance floor that lights up the party and gets your guests dancing. Available in multiple sizes and colors to suit your venue.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+<!-- Tarjeta 2: concierto -->
+      <div class="card">
+        <img src="image/main/img_main_4.png" alt="concierto">
+        <div class="card-content">
+          <h3>Weddings</h3>
+          <p>You want everything for your wedding to be perfect and that includes DJs, themes, and more. Work with us to make sure you know what you're looking for and the best options.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+<!-- Tarjeta 2: cantantes -->
+      <div class="card">
+        <img src="image/main/img_main_7.png" alt="cantantes">
+        <div class="card-content">
+          <h3>Musicians</h3>
+          <p>Give your guests or clients the WOW factor by booking one of our talented musicians to serenade your big day. We book musicians who are extremely flexible and trained in many genres.</p>
+          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </section>
 
       </main>
@@ -101,3 +165,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
