--- a/index.html
+++ b/index.html
@@ -88,15 +88,13 @@
     </div>
   </article>
        <!-- sesion 03 -->
-<section class="services__categoria">
+<section class="Services">
   <div class="section_servicios__title"><h2>servises</h2></div>
-  </div>
-
   <div class="section_servicios__container">
     <div class="grid-container">
 
  <!-- Tarjeta 2: DJ -->
-      <div class="card">
+      <div class="card__servicid1">
         <img src="image/main/img_main_5.png" alt="DJ">
         <div class="card-content">
           <h3>Wedding DJ Services</h3>
@@ -105,7 +103,7 @@
         </div>
       </div>
 <!-- Tarjeta 2: pareja -->
-      <div class="card">
+      <div class="card__servicid2">
         <img src="image/main/img_main_2.png" alt="pareja">
         <div class="card-content">
           <h3>Photo Booth Hire</h3>
@@ -114,7 +112,7 @@
         </div>
       </div>
 <!-- Tarjeta 2: boda -->
-      <div class="card">
+      <div class="card__servicid3">
         <img src="image/main/img_main_8.png" alt="boda">
         <div class="card-content">
           <h3>Uplighting</h3>
@@ -123,7 +121,7 @@
         </div>
       </div>
 <!-- Tarjeta 2: pista de baile -->
-      <div class="card">
+      <div class="card__servicid4">
         <img src="image/main/img_main_1.png" alt="pista de baile">
         <div class="card-content">
           <h3>Dance Floors</h3>
@@ -132,7 +130,7 @@
         </div>
       </div>
 <!-- Tarjeta 2: concierto -->
-      <div class="card">
+      <div class="card__servicid5">
         <img src="image/main/img_main_4.png" alt="concierto">
         <div class="card-content">
           <h3>Weddings</h3>
@@ -141,7 +139,7 @@
         </div>
       </div>
 <!-- Tarjeta 2: cantantes -->
-      <div class="card">
+      <div class="card__servicid6">
         <img src="image/main/img_main_7.png" alt="cantantes">
         <div class="card-content">
           <h3>Musicians</h3>
