--- a/index.html
+++ b/index.html
@@ -1,166 +1,192 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--se agrega linea por archivo de estilos-->
-    <link rel="stylesheet" href="styles.css" />
-    <title>aprende a programar</title>
-  </head>
-  <body>
-    <!--contenedor principal-->
-    <div class="container">
-      <!--cabeza del contenido-->
-      <header class="container-header">
-        <h1 class="container-header__title">LENGUAJES PARA APRENDER</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!--barra de navegacion-->
-        <nav class="container-nav">
-          <ul class="container-nav">
-            <li class="container-nav__list container-nav__list--box1">
-              <a href="HTML.JPG">html</a>
-            </li>
-            <li class="container-nav__list container-nav__list--box2">
-              <a href="CSS.JPG" whidth= "50xp" height="50xp">css</a>
-            </li>
-            <li class="container-nav__list container-nav__list--box3">
-              <a href="javascript.jpg.jpg">javascript</a>
-            </li>
-          </ul>
-        </nav>
-        <nav class="container-nav__list--box2">
-          <ol class="container-nav__lists">
-        </nav>
-      </header>
+  <!--se agrega linea por archivo de estilos-->
+  <link rel="stylesheet" href="styles.css" />
+  <title>aprende a programar</title>
+</head>
 
-      <!--menu-->
-      <main class="container-main">
-        <section>
+<body>
+  <!--contenedor principal-->
+  <div class="container">
+    <!--cabeza del contenido-->
+    <header class="container-header">
+      <h1 class="container-header__title">LENGUAJES PARA APRENDER</h1>
 
-          
-        </section>
+      <!--barra de navegacion-->
+      <nav class="container-nav">
+        <ul class="container-nav">
+          <li class="container-nav__list container-nav__list--box1">
+            <a href="HTML.JPG">html</a>
+          </li>
+          <li class="container-nav__list container-nav__list--box2">
+            <a href="CSS.JPG" whidth="50xp" height="50xp">css</a>
+          </li>
+          <li class="container-nav__list container-nav__list--box3">
+            <a href="javascript.jpg.jpg">javascript</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="container-nav__list--box2">
+        <ol class="container-nav__lists">
+      </nav>
+    </header>
 
-        <!--sesion 2-->
-<section class="section-about">
-  <!-- Artículo 1 -->
-  <article class="section-about__article section-about__article--reverse">
+    <!--menu-->
+    <main class="container-main">
 
-    <!-- Contenedor 1 de imagen -->
-    <div class="section-about__image-container">
-      <img src="image/main/img_main_3.png" alt="Main image woman" class="section-about__image">
-    </div>
+      <!-- section 1 -->
+      <section>
 
-    <!-- Contenedor 2 de contenido -->
-    <div class="section-about__content">
-      <div class="section-about__title"><h2>About Us</h2></div>
-      <div class="ction-asebout__text">
-        <p>A privately owned and run business, theeventslounge.com, has been serving many private and corporate clients in the and around the area for many years. We only use the best quality equipment and offer a personable service to cater for all our clients needs.</p>
-      </div>
-      <div class="section-about__text">
-        <p>We have a full £10M public liability insurance and all equipment is PAT certified. As event planning goes, our team takes thinking outside the box to a new level. It's a matter of mixing ideas up, working collectively, and finding inspiration. To say we focus on the little things and details couldn't be truer, as it's the details that matter and make an event memorable.</p>
-      </div>
-    </div>
-  </article>
 
-  <!-- Artículo 2 -->
-  <article class="section-about__article section-about__article-2">
+      </section>
 
-    <!-- Contenedor 1 de contenido -->
-    <div class="section-about__content-2">
-      <div class="section-about__content-son">
-      <div class="section-about__title-2"><h2>Create Your Perfect Event</h2></div>
-      <div class="section-about__text-2">
-        <p>It's your vision, your idea, and your party. Our event team take that sentiment to heart when helping you to plan your special event or party.</p>
-      </div>
-      <div class="section-about__text-2">
-        <p>Whether it's a photobooth you're after, a disco, uplighting or a combination of it all with event planning support, theeventslounge.com has the imagination and creative spirit you need.</p>
-      </div>
-      <div class="section-about__button-container">
-        <button class="section-about__button"><a href="#sesion_contact" class="section-about__link">Enquire Now</a></button>
-      </div>
-      </div>
-    </div>
 
-    <!-- Contenedor 2 de imagen -->
-    <div class="section-about__image-container-2">
-      <img src="image/main/img_main_6.png" alt="Two women having fun" class="section-about__image-2">
-    </div>
-  </article>
-       <!-- sesion 03 -->
-<section class="Services">
-  <div class="section_servicios__title"><h2>servises</h2></div>
-  <div class="section_servicios__container">
-    <div class="grid-container">
+      <!-- section 2 -->
+      <section class="section-about">
+        <!-- Artículo 1 -->
+        <article class="section-about__article section-about__article--reverse">
+          <div class="section-about__image-container">
+            <img src="image/main/img_main_3.png" alt="Main image woman" class="section-about__image">
+          </div>
+          <div class="section-about__content">
+            <div class="section-about__title">
+              <h2>About Us</h2>
+            </div>
+            <div class="section-about__text">
+              <p>A privately owned and run business, theeventslounge.com, has been serving many private and corporate
+                clients in and around the area for many years. We only use the best quality equipment and offer a
+                personable service to cater for all our clients needs.</p>
+            </div>
+            <div class="section-about__text">
+              <p>We have a full £10M public liability insurance and all equipment is PAT certified. As event planning
+                goes, our team takes thinking outside the box to a new level. It's a matter of mixing ideas up, working
+                collectively, and finding inspiration. To say we focus on the little things and details couldn't be
+                truer, as it's the details that matter and make an event memorable.</p>
+            </div>
+          </div>
+        </article>
 
- <!-- Tarjeta 2: DJ -->
-      <div class="card__servicid1">
-        <img src="image/main/img_main_5.png" alt="DJ">
-        <div class="card-content">
-          <h3>Wedding DJ Services</h3>
-          <p>Our professional wedding DJ services ensure an unforgettable experience through the perfect playlist, seamless mixing, and special moments. We take care of every detail.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
+        <!-- Artículo 2 -->
+        <article class="section-about__article section-about__article--normal">
+          <div class="section-about__content section-about__content--alt">
+            <div class="section-about__title section-about__title--alt">
+              <h2>Create Your Perfect Event</h2>
+            </div>
+            <div class="section-about__text section-about__text--alt">
+              <p>It's your vision, your idea, and your party. Our event team take that sentiment to heart when helping
+                you to plan your special event or party.</p>
+            </div>
+            <div class="section-about__text section-about__text--alt">
+              <p>Whether it's a photobooth you're after, a disco, uplighting or a combination of it all with event
+                planning support, theeventslounge.com has the imagination and creative spirit you need.</p>
+            </div>
+            <div class="section-about__button-container">
+              <button class="section-about__button">
+                <a href="#sesion_contact" class="section-about__link">Enquire Now</a>
+              </button>
+            </div>
+          </div>
+          <div class="section-about__image-container section-about__image-container--alt">
+            <img src="image/main/img_main_6.png" alt="Two women having fun" class="section-about__image">
+          </div>
+        </article>
+
+      </section>
+
+
+      <!-- sesion 03 -->
+      <section class="Services">
+        <div class="section_servicios__title">
+          <h2>servises</h2>
         </div>
-      </div>
-<!-- Tarjeta 2: pareja -->
-      <div class="card__servicid2">
-        <img src="image/main/img_main_2.png" alt="pareja">
-        <div class="card-content">
-          <h3>Photo Booth Hire</h3>
-          <p>This new take of the Photo Booth comes fully digital and is a great way to capture special moments. Includes digital filters and social sharing.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
-        </div>
-      </div>
-<!-- Tarjeta 2: boda -->
-      <div class="card__servicid3">
-        <img src="image/main/img_main_8.png" alt="boda">
-        <div class="card-content">
-          <h3>Uplighting</h3>
-          <p>Add that WOW factor to your event with beautiful mood lighting that will change the mood of any venue, big or small.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
-        </div>
-      </div>
-<!-- Tarjeta 2: pista de baile -->
-      <div class="card__servicid4">
-        <img src="image/main/img_main_1.png" alt="pista de baile">
-        <div class="card-content">
-          <h3>Dance Floors</h3>
-          <p>Every customizable type of dance floor that lights up the party and gets your guests dancing. Available in multiple sizes and colors to suit your venue.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
-        </div>
-      </div>
-<!-- Tarjeta 2: concierto -->
-      <div class="card__servicid5">
-        <img src="image/main/img_main_4.png" alt="concierto">
-        <div class="card-content">
-          <h3>Weddings</h3>
-          <p>You want everything for your wedding to be perfect and that includes DJs, themes, and more. Work with us to make sure you know what you're looking for and the best options.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
-        </div>
-      </div>
-<!-- Tarjeta 2: cantantes -->
-      <div class="card__servicid6">
-        <img src="image/main/img_main_7.png" alt="cantantes">
-        <div class="card-content">
-          <h3>Musicians</h3>
-          <p>Give your guests or clients the WOW factor by booking one of our talented musicians to serenade your big day. We book musicians who are extremely flexible and trained in many genres.</p>
-          <button class="services__categoria__button"><a href="#sesion_contact" class="services__categoria__link">Learn More</a></button>
-        </div>
-      </div>
+        <div class="section_servicios__container">
+          <div class="grid-container">
 
-    </div>
+            <!-- Tarjeta 2: DJ -->
+            <div class="card__servicid1">
+              <img src="image/main/img_main_5.png" alt="DJ">
+              <div class="card-content">
+                <h3>Wedding DJ Services</h3>
+                <p>Our professional wedding DJ services ensure an unforgettable experience through the perfect
+                  playlist, seamless mixing, and special moments. We take care of every detail.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+            <!-- Tarjeta 2: pareja -->
+            <div class="card__servicid2">
+              <img src="image/main/img_main_2.png" alt="pareja">
+              <div class="card-content">
+                <h3>Photo Booth Hire</h3>
+                <p>This new take of the Photo Booth comes fully digital and is a great way to capture special moments.
+                  Includes digital filters and social sharing.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+            <!-- Tarjeta 2: boda -->
+            <div class="card__servicid3">
+              <img src="image/main/img_main_8.png" alt="boda">
+              <div class="card-content">
+                <h3>Uplighting</h3>
+                <p>Add that WOW factor to your event with beautiful mood lighting that will change the mood of any
+                  venue, big or small.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+            <!-- Tarjeta 2: pista de baile -->
+            <div class="card__servicid4">
+              <img src="image/main/img_main_1.png" alt="pista de baile">
+              <div class="card-content">
+                <h3>Dance Floors</h3>
+                <p>Every customizable type of dance floor that lights up the party and gets your guests dancing.
+                  Available in multiple sizes and colors to suit your venue.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+            <!-- Tarjeta 2: concierto -->
+            <div class="card__servicid5">
+              <img src="image/main/img_main_4.png" alt="concierto">
+              <div class="card-content">
+                <h3>Weddings</h3>
+                <p>You want everything for your wedding to be perfect and that includes DJs, themes, and more. Work
+                  with us to make sure you know what you're looking for and the best options.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+            <!-- Tarjeta 2: cantantes -->
+            <div class="card__servicid6">
+              <img src="image/main/img_main_7.png" alt="cantantes">
+              <div class="card-content">
+                <h3>Musicians</h3>
+                <p>Give your guests or clients the WOW factor by booking one of our talented musicians to serenade
+                  your big day. We book musicians who are extremely flexible and trained in many genres.</p>
+                <button class="services__categoria__button"><a href="#sesion_contact"
+                    class="services__categoria__link">Learn More</a></button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <!--footer-->
+    <footer class="container-footer"></footer>
   </div>
-</section>
 
-      </main>
+  <!--Codigo JS-->
+  <!--Se agrega linea por codigo-->
+  <script src="main.js"></script>
+</body>
 
-      <!--footer-->
-      <footer class="container-footer"></footer>
-    </div>
-
-    <!--Codigo JS-->
-    <!--Se agrega linea por codigo-->
-    <script src="main.js"></script>
-  </body>
 </html>
-
