--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <div class="section-about__title">
               <h2>About Us</h2>
             </div>
-            <div class="section-about__text">
+            <div class="section-about__text section-about__text-reverce">
               <p>A privately owned and run business, theeventslounge.com, has been serving many private and corporate
                 clients in and around the area for many years. We only use the best quality equipment and offer a
                 personable service to cater for all our clients needs.</p>
             </div>
-            <div class="section-about__text">
+            <div class="section-about__text section-about__text-reverce">
               <p>We have a full £10M public liability insurance and all equipment is PAT certified. As event planning
                 goes, our team takes thinking outside the box to a new level. It's a matter of mixing ideas up, working
                 collectively, and finding inspiration. To say we focus on the little things and details couldn't be
