--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
 
 
-      <!-- section 2 -->
+      <!-- section 02 -->
       <section class="section-about">
         <!-- Artículo 1 -->
         <article class="section-about__article section-about__article--reverse">
@@ -98,16 +98,22 @@
 
       </section>
 
-
       <!-- sesion 03 -->
       <section class="Services">
-        <div class="section_servicios__title">
-          <h2>servises</h2>
-        </div>
-        <div class="section_servicios__container">
-          <div class="grid-container">
 
-            <!-- Tarjeta 2: DJ -->
+        <!-- Article 1 -->
+        <article class="section_servicios__title">
+          <h2>servises</h2>
+        </article>
+
+
+        <!-- Article 2 -->
+        <!-- Contenedor de targetas -->
+        <article class="section_servicios__container">
+
+          <!-- Parte 1 -->
+          <div>
+            <!-- Tarjeta 1: DJ -->
             <div class="card__servicid1">
               <img src="image/main/img_main_5.png" alt="DJ">
               <div class="card-content">
@@ -129,7 +135,7 @@
                     class="services__categoria__link">Learn More</a></button>
               </div>
             </div>
-            <!-- Tarjeta 2: boda -->
+            <!-- Tarjeta 3: boda -->
             <div class="card__servicid3">
               <img src="image/main/img_main_8.png" alt="boda">
               <div class="card-content">
@@ -140,7 +146,12 @@
                     class="services__categoria__link">Learn More</a></button>
               </div>
             </div>
-            <!-- Tarjeta 2: pista de baile -->
+
+          </div>
+
+          <!-- Parte 2 -->
+          <div>
+            <!-- Tarjeta 4: pista de baile -->
             <div class="card__servicid4">
               <img src="image/main/img_main_1.png" alt="pista de baile">
               <div class="card-content">
@@ -151,7 +162,7 @@
                     class="services__categoria__link">Learn More</a></button>
               </div>
             </div>
-            <!-- Tarjeta 2: concierto -->
+            <!-- Tarjeta 5: concierto -->
             <div class="card__servicid5">
               <img src="image/main/img_main_4.png" alt="concierto">
               <div class="card-content">
@@ -162,7 +173,7 @@
                     class="services__categoria__link">Learn More</a></button>
               </div>
             </div>
-            <!-- Tarjeta 2: cantantes -->
+            <!-- Tarjeta 6: cantantes -->
             <div class="card__servicid6">
               <img src="image/main/img_main_7.png" alt="cantantes">
               <div class="card-content">
@@ -173,9 +184,10 @@
                     class="services__categoria__link">Learn More</a></button>
               </div>
             </div>
-
           </div>
-        </div>
+
+
+        </article>
       </section>
 
     </main>
