--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         <article class="section_servicios__container">
 
           <!-- Parte 1 -->
-          <div>
+          <div class="section_servicios__container__cards">
             <!-- Tarjeta 1: DJ -->
             <div class="card__servicid1">
-              <img src="image/main/img_main_5.png" alt="DJ">
-              <div class="card-content">
+              <img class="imagen" src="image/main/img_main_5.png" alt="DJ">
+              <div class="card_content">
                 <h3>Wedding DJ Services</h3>
                 <p>Our professional wedding DJ services ensure an unforgettable experience through the perfect
                   playlist, seamless mixing, and special moments. We take care of every detail.</p>
@@ -126,7 +126,7 @@
             </div>
             <!-- Tarjeta 2: pareja -->
             <div class="card__servicid2">
-              <img src="image/main/img_main_2.png" alt="pareja">
+              <img class="imagen" src="image/main/img_main_2.png" alt="pareja">
               <div class="card-content">
                 <h3>Photo Booth Hire</h3>
                 <p>This new take of the Photo Booth comes fully digital and is a great way to capture special moments.
@@ -137,7 +137,7 @@
             </div>
             <!-- Tarjeta 3: boda -->
             <div class="card__servicid3">
-              <img src="image/main/img_main_8.png" alt="boda">
+              <img class="imagen" src="image/main/img_main_8.png" alt="boda">
               <div class="card-content">
                 <h3>Uplighting</h3>
                 <p>Add that WOW factor to your event with beautiful mood lighting that will change the mood of any
